Fixed some things that helped the A* work better, but the method tests are still broken